# Airflow-Reversal-Prediction

./: .gitignore  README  README.md  environment.yml  main.py  models.py  network.py  output.csv  pyproject.toml  requirements.txt
data/: N4_C10_O3.csv  N4_C10_O3_flow.csv  N4_C10_O3_matrix.csv  N4_C8_O2.csv  N4_C8_O2_flow.csv  N4_C8_O2_matrix.csv  N4_C9_O2.csv  N4_C9_O2_flow.csv  N4_C9_O2_matrix.csv  N5_C10_O2.csv  N5_C10_O2_flow.csv  N5_C10_O2_matrix.csv  N5_C11_O4.csv  N5_C11_O4_flow.csv  N5_C11_O4_matrix.csv  N5_C12_O3.csv  N5_C12_O3_flow.csv  N5_C12_O3_matrix.csv  N5_C12_O4.csv  N5_C12_O4_flow.csv  N5_C12_O4_matrix.csv  N5_C13_O4.csv  N5_C13_O4_flow.csv  N5_C13_O4_matrix.csv  N6_C11_O2.csv  N6_C11_O2_flow.csv  N6_C11_O2_matrix.csv  N6_C13_O4.csv  N6_C13_O4_flow.csv  N6_C13_O4_matrix.csv  N6_C14_O3.csv  N6_C14_O3_flow.csv  N6_C14_O3_matrix.csv  N6_C14_O4.csv  N6_C14_O4_flow.csv  N6_C14_O4_matrix.csv  N7_C14_O2.csv  N7_C14_O2_flow.csv  N7_C14_O2_matrix.csv  N7_C15_O2.csv  (+32 more)
src/: config.py
src/deepl/: dataset.py  datasets.py  loss.py  model.py  prep.py  train.py
src/utils/: flow.py
src/ventilation/: build_data.py  caculation.py  config.py  connection.py  main.py  network.py  node.py
tests/ventilation_test/: test_connection.py  test_node.py
ventilation/: caculation.py  connection.py  main.py  network.py  node.py
ventilation_simulation/: concentration_calculate.py  connection.py  main.py  network.py  node.py
